--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -1,6 +1,6 @@
 .map {
 	width: 100%;
-	height: 100vh;
+	height: calc(100vh - 80px);
 }
 
 .geocoder {
@@ -22,17 +22,56 @@
 	top: 15px;
 }
 
-@media (max-width: 800px) {
-	.geocoder {
-		width: 100%;
-		height: 50px;
-		right: 0;
-		top: 0;
-	}
+.marker {
+	background-image: url('../../public/marker.png');
+	background-size: cover;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	cursor: pointer;
+}
 
-	.geocoder div,
-	.geocoder input {
-		max-width: 100%;
+.mapboxgl-popup {
+	max-width: 200px;
+}
+
+.mapboxgl-popup-header {
+	padding-bottom: 8px;
+	width: calc(100% - 20px);
+}
+
+.mapboxgl-popup-contact-container {
+	background-color: #f5f5f5;
+	border-radius: 4px;
+	padding: 8px;
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.mapboxgl-popup-close-button {
+	border-radius: 4px !important;
+	color: #989898;
+	font-size: 20px;
+	font-weight: 400;
+	margin: 4px 6px 0 0;
+	padding: 0 4px;
+}
+
+.mapboxgl-popup-close-button:focus-visible,
+.mapboxgl-popup-close-button:hover {
+	color: initial;
+	outline: none;
+	background-color: transparent !important;
+}
+
+.mapboxgl-ctrl-geocoder {
+	min-width: 400px;
+}
+
+@media (max-width: 800px) {
+	.mapboxgl-ctrl-geocoder {
+		min-width: calc(100vw - 30px);
 		width: 100%;
 	}
 }
